<resources>
    <string name="AUX_Left">AUXL</string>
    <string name="AUX_Right">AUXR</string>
    <string name="Alpha">Alpha</string>
    <string name="Alpha_A">A</string>
    <string name="Average_Ave">Ave</string>
    <string name="Axis_X">X</string>
    <string name="Axis_Y">Y</string>
    <string name="Axis_Z">Z</string>
    <string name="Back_B">B</string>
    <string name="Beta">Beta</string>
    <string name="Beta_B">B</string>
    <string name="Concentration_C">C</string>
    <string name="Delta">Delta</string>
    <string name="Delta_D">D</string>
    <string name="Front_F">F</string>
    <string name="Gamma">Gamma</string>
    <string name="Gamma_G">G</string>
    <string name="Left_L">L</string>
    <string name="Mellow_M">M</string>
    <string name="Right_R">R</string>
    <string name="Theta">Theta</string>
    <string name="Theta_T">T</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="ad_battery_level">Battery level</string>
    <string name="ad_headband_0">left ear.</string>
    <string name="ad_headband_1">left forehead.</string>
    <string name="ad_headband_2">right forehead.</string>
    <string name="ad_headband_3">right ear.</string>
    <string name="ad_headband_bad_connection">Bad connection on</string>
    <string name="ad_headband_off">Headband is off.</string>
    <string name="ad_unknown">not yet reported by device.</string>
    <string name="algorithm_concentration">Concentration</string>
    <string name="algorithm_mellow">Mellow</string>
    <string name="algorithm_wait_for_sensors_to_connect">Wait: Sensor connection</string>
    <string name="algorithm_wait_for_sensors_to_settle">Wait:</string>
    <string name="defaultDiscreteFFTComponents">7</string>
    <string name="defaultDiscreteFFTWindow">1024</string>
    <string name="defaultFileNamePrefix">museMonitor</string>
    <string name="defaultFontSizeAbsolute">80</string>
    <string name="defaultFontSizeDiscrete">60</string>
    <string name="defaultFontSizeRaw">60</string>
    <string name="defaultFontSizeSpectrogram">60</string>
    <string name="defaultGraphType">0</string>
    <string name="defaultLineWidthAbsolute">10</string>
    <string name="defaultLineWidthDiscrete">2</string>
    <string name="defaultLineWidthRaw">1</string>
    <string name="defaultMicrovoltsMax">400</string>
    <string name="defaultNotchFrequency">60Hz</string>
    <string name="defaultOSCPathPrefix" />
    <string name="defaultOSCStreamIP">192.168.1.10</string>
    <string name="defaultRawEEGSecs">5</string>
    <string name="defaultSpectrogramFFTComponents">7</string>
    <string name="defaultSpectrogramFFTWindow">1024</string>
    <string name="defaultSpectrogramMagnitudeMax">3</string>
    <string name="defaultSpectrogramMagnitudeMin">1</string>
    <string name="defaultSpectrogramTimerInterval">10</string>
    <string name="defaultWriteDataIntervalMS">1000</string>
    <string name="menu_graph_toggle">Graph Toggle</string>
    <string name="menu_help">Help</string>
    <string name="menu_record">Record</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_stream">OSC Stream</string>
    <string name="pref_FFTComponents">FFT Components</string>
    <string name="pref_FFTComponents_summary">Sensors to include in average</string>
    <string name="pref_OSCPathPrefix">OSC Path prefix</string>
    <string name="pref_OSCPathPrefix_summary">Optional OSC Path prefix</string>
    <string name="pref_aboutInfo">Mind Monitor</string>
    <string name="pref_aboutInfo_summary">Mind Monitor</string>
    <string name="pref_advanced_settings">Advanced Settings</string>
    <string name="pref_algorithms">Algorithms</string>
    <string name="pref_allowRawOverlap">Overlap</string>
    <string name="pref_allowRawOverlap_summary_off">Crop trace max and min values to the display area</string>
    <string name="pref_allowRawOverlap_summary_on">Allow traces to overlap each other</string>
    <string name="pref_battery">Show Battery</string>
    <string name="pref_battery_summary">Charge percent remaining</string>
    <string name="pref_brainWaveTypesAbs">Wave Types (Absolute)</string>
    <string name="pref_brainWaveTypesRaw">Wave Types (Raw)</string>
    <string name="pref_brainWaves">Brain Waves (Absolute)</string>
    <string name="pref_cat_Absolute">Absolute Graph Settings</string>
    <string name="pref_cat_Discrete">Discrete frequency Graph Settings</string>
    <string name="pref_cat_Raw">Raw EEG Graph Settings</string>
    <string name="pref_cat_Spectrogram">Spectrogram Graph Settings</string>
    <string name="pref_dataFormat">Recording format</string>
    <string name="pref_dataFormat_csv">CSV</string>
    <string name="pref_dataFormat_csv_summary">Excel compatible CSV</string>
    <string name="pref_dataFormat_muse">Muse</string>
    <string name="pref_dataFormat_muse_summary">Muse Player compatible protocol buffer</string>
    <string name="pref_fftwindow">FFT Window</string>
    <string name="pref_fftwindow_summary">FFT sample size (256 samples ~1sec)</string>
    <string name="pref_filenamePrefix">Filename prefix</string>
    <string name="pref_filenamePrefix_summary">Files are named with the prefix, then the date and time</string>
    <string name="pref_font_size">Font size</string>
    <string name="pref_font_size_summary">Scale the font to make reading easier</string>
    <string name="pref_graphType">Graph Type</string>
    <string name="pref_graphType_summary">Plot Absolute Waves, Raw Microvolts, Discrete frequency, Spectrogram or Accelerometer/Gyroscope</string>
    <string name="pref_hideHorseshoe">Hide Horseshoe</string>
    <string name="pref_hideHorseshoe_summary">Hide the headband horseshoe once all sensors are connected.</string>
    <string name="pref_imageFormat">Image format</string>
    <string name="pref_imageFormat_jpeg">JPEG</string>
    <string name="pref_imageFormat_jpeg_summary">Use JPEG for sharing images</string>
    <string name="pref_imageFormat_png">PNG</string>
    <string name="pref_imageFormat_png_summary">Use transparent PNG for sharing images</string>
    <string name="pref_line_width">Line Width</string>
    <string name="pref_line_width_summary">Width of graph lines</string>
    <string name="pref_marketLinkOther">Other Apps</string>
    <string name="pref_marketLinkOther_summary">View my other apps on Google Play</string>
    <string name="pref_marketLinkRate">Rate App</string>
    <string name="pref_marketLinkRate_summary">Rate this app on Google Play</string>
    <string name="pref_notch_frequency">Notch Frequency</string>
    <string name="pref_notch_frequency_summary">Power line frequency filter</string>
    <string name="pref_oscStreamAverageBrainwavesOnly">OSC Stream Brainwaves</string>
    <string name="pref_oscStreamAverageBrainwavesOnly_off">All</string>
    <string name="pref_oscStreamAverageBrainwavesOnly_on">Average</string>
    <string name="pref_oscStreamAverageBrainwavesOnly_summary_off">All values</string>
    <string name="pref_oscStreamAverageBrainwavesOnly_summary_on">Average only</string>
    <string name="pref_oscStreamIP">OSC Stream Target IP</string>
    <string name="pref_oscStreamIP_summary">OSC Stream target server name|ip</string>
    <string name="pref_oscStreamPort">OSC Stream Port</string>
    <string name="pref_oscStreamPort_summary">OSC Stream target server port</string>
    <string name="pref_raw_seconds_to_display">Seconds to display</string>
    <string name="pref_raw_seconds_to_display_summary">1 sec ~= 220 data points</string>
    <string name="pref_raw_vertical_max">Vertical Max</string>
    <string name="pref_raw_vertical_max_summary">Microvolts in vertical scale</string>
    <string name="pref_settings">Settings</string>
    <string name="pref_showAllSensors">All Sensors</string>
    <string name="pref_showAllSensors_desc">Show values for each sensor (TP9,AF7,AF8,TP10)</string>
    <string name="pref_showAlpha">Alpha</string>
    <string name="pref_showAlpha_desc">Show Alpha brain wave on graph</string>
    <string name="pref_showAux">Show Aux input</string>
    <string name="pref_showAux_summary">Auxiliary input connected to USB</string>
    <string name="pref_showAverage">Average values</string>
    <string name="pref_showAverage_desc">Average from all sensors (TP9,AF7,AF8,TP10)</string>
    <string name="pref_showBeta">Beta</string>
    <string name="pref_showBeta_desc">Show Beta brain wave on graph</string>
    <string name="pref_showConcentration">Concentration</string>
    <string name="pref_showConcentration_desc">Show experimental Concentration algorithm on graph</string>
    <string name="pref_showDelta">Delta</string>
    <string name="pref_showDelta_desc">Show Delta brain wave on graph</string>
    <string name="pref_showFrontBack">Front/Back</string>
    <string name="pref_showFrontBack_desc">Show Front (AF7,AF8) vs Back (TP9,TP10) split</string>
    <string name="pref_showGamma">Gamma</string>
    <string name="pref_showGamma_desc">Show Gamma brain wave on graph</string>
    <string name="pref_showLeftRight">Left/Right</string>
    <string name="pref_showLeftRight_desc">Show Left (AF7,TP9) vs Right (AF8,TP10) split</string>
    <string name="pref_showMellow">Mellow</string>
    <string name="pref_showMellow_desc">Show experimental Mellow algorithm on the graph</string>
    <string name="pref_showSecondIntervals">Show seconds</string>
    <string name="pref_showSecondIntervals_summary">Dotted vertical lines showing second intervals</string>
    <string name="pref_showTheta">Theta</string>
    <string name="pref_showTheta_desc">Show Theta brain wave on graph</string>
    <string name="pref_spectrogramMagnitudeMax">Magnitude Max</string>
    <string name="pref_spectrogramMagnitudeMax_summary">Magnitude Max</string>
    <string name="pref_spectrogramMagnitudeMin">Magnitude Min</string>
    <string name="pref_spectrogramMagnitudeMin_summary">Magnitude Min</string>
    <string name="pref_spectrogramTimerInterval">Time Tick Interval</string>
    <string name="pref_spectrogramTimerInterval_summary">Dashed line on spectrogram every X seconds</string>
    <string name="pref_supportEmail">Support Email</string>
    <string name="pref_supportEmail_summary">Get help/Give Feedback via Email</string>
    <string name="pref_supportForums">Support Forums</string>
    <string name="pref_supportForums_summary">Get help/Give Feedback Online</string>
    <string name="pref_symbols">Symbols</string>
    <string name="pref_symbols_greek">αβδ</string>
    <string name="pref_symbols_greek_desc">Greek</string>
    <string name="pref_symbols_latin">ABC</string>
    <string name="pref_symbols_latin_desc">Latin</string>
    <string name="pref_tag_buttons">Marker buttons</string>
    <string name="pref_tag_buttons_desc_off">Buttons for manual data tagging hidden</string>
    <string name="pref_tag_buttons_desc_on">Buttons for manual data tagging shown</string>
    <string name="pref_values">Show Values</string>
    <string name="pref_values_summary_absolute">Power Spectral Density [0:100dB]</string>
    <string name="pref_vertical_centering">Vertical Centering</string>
    <string name="pref_vertical_centering_auto">Auto</string>
    <string name="pref_vertical_centering_left">Left</string>
    <string name="pref_vertical_centering_summary">Automatic average</string>
    <string name="pref_vertical_centering_summary_off">Fixed to left value</string>
    <string name="pref_writeDataIntervalMS">Recording Interval</string>
    <string name="pref_writeDataIntervalMS_summary">How often data is written while recording</string>
    <string name="pref_zipBeforeUpload">ZIP before upload</string>
    <string name="pref_zipBeforeUpload_summary_off">Upload large uncompressed data files</string>
    <string name="pref_zipBeforeUpload_summary_on">ZIP recorded data files before uploading</string>
</resources>