<?xml version='1.0' encoding='utf-8'?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_settings" android:key="prefCatSettings">
        <SwitchPreference android:icon="@drawable/ic_action_labels" android:enabled="true" android:title="@string/pref_symbols" android:key="greek_symbols" android:defaultValue="true" android:summaryOn="@string/pref_symbols_greek_desc" android:summaryOff="@string/pref_symbols_latin_desc" android:switchTextOn="@string/pref_symbols_greek" android:switchTextOff="@string/pref_symbols_latin" />
        <CheckBoxPreference android:icon="@drawable/ic_action_horseshoe" android:title="@string/pref_hideHorseshoe" android:key="hideHorseshoe" android:summary="@string/pref_hideHorseshoe_summary" android:defaultValue="@bool/defaultHideHorseshoe" />
        <CheckBoxPreference android:icon="@drawable/ic_action_graph" android:title="@string/pref_values" android:key="showValues" android:summary="@string/pref_values_summary_absolute" android:defaultValue="@bool/defaultShowValues" />
        <CheckBoxPreference android:icon="@drawable/ic_action_battery" android:title="@string/pref_battery" android:key="showBattery" android:summary="@string/pref_battery_summary" android:defaultValue="@bool/defaultShowBattery" />
        <SwitchPreference android:icon="@drawable/ic_action_share" android:title="@string/pref_imageFormat" android:key="imageFormatJPEG" android:defaultValue="@bool/defaultImageFormatJPEG" android:summaryOn="@string/pref_imageFormat_jpeg_summary" android:summaryOff="@string/pref_imageFormat_png_summary" android:switchTextOn="@string/pref_imageFormat_jpeg" android:switchTextOff="@string/pref_imageFormat_png" />
        <SwitchPreference android:icon="@drawable/ic_action_save" android:title="@string/pref_dataFormat" android:key="dataFormatCSV" android:defaultValue="@bool/defaultDataFormatCSV" android:summaryOn="@string/pref_dataFormat_csv_summary" android:summaryOff="@string/pref_dataFormat_muse_summary" android:switchTextOn="@string/pref_dataFormat_csv" android:switchTextOff="@string/pref_dataFormat_muse" />
        <ListPreference android:icon="@drawable/ic_action_time" android:entries="@array/writeDataIntervalMSDesc" android:title="@string/pref_writeDataIntervalMS" android:key="writeDataIntervalMS" android:summary="@string/pref_writeDataIntervalMS_summary" android:defaultValue="@string/defaultWriteDataIntervalMS" android:entryValues="@array/writeDataIntervalMS" />
        <SwitchPreference android:icon="@drawable/ic_action_zip" android:title="@string/pref_zipBeforeUpload" android:key="zipBeforeUpload" android:summary="@string/pref_zipBeforeUpload_summary_on" android:defaultValue="@bool/defaultZipBeforeUpload" android:summaryOn="@string/pref_zipBeforeUpload_summary_on" android:summaryOff="@string/pref_zipBeforeUpload_summary_off" />
        <EditTextPreference android:icon="@drawable/ic_action_save" android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ-,._ " android:title="@string/pref_filenamePrefix" android:key="filenamePrefix" android:summary="@string/pref_filenamePrefix_summary" android:defaultValue="@string/defaultFileNamePrefix" android:inputType="text" />
        <EditTextPreference android:icon="@drawable/ic_action_streaming" android:title="@string/pref_oscStreamIP" android:key="oscStreamIP" android:summary="@string/pref_oscStreamIP_summary" android:defaultValue="@string/defaultOSCStreamIP" />
        <EditTextPreference android:icon="@drawable/ic_action_streaming" android:numeric="integer" android:title="@string/pref_oscStreamPort" android:key="oscStreamPort" android:summary="@string/pref_oscStreamPort_summary" android:defaultValue="@integer/defaultOSCStreamPort" />
        <SwitchPreference android:icon="@drawable/ic_action_streaming" android:title="@string/pref_oscStreamAverageBrainwavesOnly" android:key="oscStreamAverageBrainwavesOnly" android:defaultValue="@bool/defaultOSCStreamAverageBrainwavesOnly" android:summaryOn="@string/pref_oscStreamAverageBrainwavesOnly_summary_on" android:summaryOff="@string/pref_oscStreamAverageBrainwavesOnly_summary_off" android:switchTextOn="@string/pref_oscStreamAverageBrainwavesOnly_on" android:switchTextOff="@string/pref_oscStreamAverageBrainwavesOnly_off" />
        <EditTextPreference android:icon="@drawable/ic_action_streaming" android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ/-,._ " android:title="@string/pref_OSCPathPrefix" android:key="OSCPathPrefix" android:summary="@string/pref_OSCPathPrefix_summary" android:defaultValue="@string/defaultOSCPathPrefix" android:inputType="text" />
        <ListPreference android:icon="@drawable/ic_action_graph" android:entries="@array/graphTypesDesc" android:title="@string/pref_graphType" android:key="graphType" android:summary="@string/pref_graphType_summary" android:defaultValue="@string/defaultGraphType" android:entryValues="@array/graphTypes" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_cat_Absolute" android:key="prefCatAbsolute">
        <ListPreference android:icon="@drawable/ic_action_editor_format_size" android:entries="@array/fontSizes" android:title="@string/pref_font_size" android:key="fontSizeAbsolute" android:summary="@string/pref_font_size_summary" android:defaultValue="@string/defaultFontSizeAbsolute" android:entryValues="@array/fontSizes" />
        <ListPreference android:icon="@drawable/ic_action_edit" android:entries="@array/lineWidths" android:title="@string/pref_line_width" android:key="lineWidthAbsolute" android:summary="@string/pref_line_width_summary" android:defaultValue="@string/defaultLineWidthAbsolute" android:entryValues="@array/lineWidths" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_cat_Raw" android:key="prefCatRaw">
        <ListPreference android:icon="@drawable/ic_action_time" android:enabled="true" android:entries="@array/rawEEGSecsDesc" android:title="@string/pref_raw_seconds_to_display" android:key="rawSecondsToDisplay" android:summary="@string/pref_raw_seconds_to_display_summary" android:defaultValue="@string/defaultRawEEGSecs" android:entryValues="@array/rawEEGSecs" />
        <ListPreference android:icon="@drawable/ic_action_editor_format_size" android:entries="@array/fontSizes" android:title="@string/pref_font_size" android:key="fontSizeRaw" android:summary="@string/pref_font_size_summary" android:defaultValue="@string/defaultFontSizeRaw" android:entryValues="@array/fontSizes" />
        <ListPreference android:icon="@drawable/ic_action_edit" android:entries="@array/lineWidths" android:title="@string/pref_line_width" android:key="lineWidthRaw" android:summary="@string/pref_line_width_summary" android:defaultValue="@string/defaultLineWidthRaw" android:entryValues="@array/lineWidths" />
        <ListPreference android:icon="@drawable/ic_action_action_trending_up" android:entries="@array/microvoltsMaxDesc" android:title="@string/pref_raw_vertical_max" android:key="rawVerticalMax" android:summary="@string/pref_raw_vertical_max_summary" android:defaultValue="@string/defaultMicrovoltsMax" android:entryValues="@array/microvoltsMax" />
        <SwitchPreference android:icon="@drawable/ic_action_editor_vertical_align_center" android:title="@string/pref_vertical_centering" android:key="verticalCenteringAuto" android:defaultValue="@bool/defaultVerticalCenteringAuto" android:summaryOn="@string/pref_vertical_centering_summary" android:summaryOff="@string/pref_vertical_centering_summary_off" android:switchTextOn="@string/pref_vertical_centering_auto" android:switchTextOff="@string/pref_vertical_centering_left" />
        <CheckBoxPreference android:icon="@drawable/ic_action_av_shuffle" android:title="@string/pref_allowRawOverlap" android:key="allowRawOverlap" android:summary="@string/pref_allowRawOverlap_summary_on" android:defaultValue="@bool/defaultAllowRawOverlap" android:summaryOn="@string/pref_allowRawOverlap_summary_on" android:summaryOff="@string/pref_allowRawOverlap_summary_off" />
        <CheckBoxPreference android:icon="@drawable/ic_action_image_straighten" android:title="@string/pref_showSecondIntervals" android:key="showSecondIntervals" android:summary="@string/pref_showSecondIntervals_summary" android:defaultValue="@bool/defaultShowSecondIntervals" />
        <CheckBoxPreference android:icon="@drawable/ic_aux" android:title="@string/pref_showAux" android:key="showAux" android:summary="@string/pref_showAux_summary" android:defaultValue="@bool/defaultShowAux" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_cat_Discrete" android:key="prefCatDiscrete">
        <ListPreference android:icon="@drawable/ic_action_editor_format_size" android:entries="@array/fontSizes" android:title="@string/pref_font_size" android:key="fontSizeDiscrete" android:summary="@string/pref_font_size_summary" android:defaultValue="@string/defaultFontSizeDiscrete" android:entryValues="@array/fontSizes" />
        <ListPreference android:icon="@drawable/ic_action_edit" android:entries="@array/lineWidths" android:title="@string/pref_line_width" android:key="lineWidthDiscrete" android:summary="@string/pref_line_width_summary" android:defaultValue="@string/defaultLineWidthDiscrete" android:entryValues="@array/lineWidths" />
        <ListPreference android:icon="@drawable/ic_action_graph" android:entries="@array/fftWindows_desc" android:title="@string/pref_fftwindow" android:key="discreteFftWindow" android:summary="@string/pref_fftwindow_summary" android:defaultValue="@string/defaultDiscreteFFTWindow" android:entryValues="@array/fftWindows" />
        <ListPreference android:icon="@drawable/ic_action_brain" android:entries="@array/fftComponents_desc" android:title="@string/pref_FFTComponents" android:key="discreteFFTComponents" android:summary="@string/pref_FFTComponents_summary" android:defaultValue="@string/defaultDiscreteFFTComponents" android:entryValues="@array/fftComponents_values" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_cat_Spectrogram" android:key="prefCatSpectrogram">
        <ListPreference android:icon="@drawable/ic_action_editor_format_size" android:entries="@array/fontSizes" android:title="@string/pref_font_size" android:key="fontSizeSpectrogram" android:summary="@string/pref_font_size_summary" android:defaultValue="@string/defaultFontSizeSpectrogram" android:entryValues="@array/fontSizes" />
        <ListPreference android:icon="@drawable/ic_action_time" android:entries="@array/fftWindows_desc" android:title="@string/pref_fftwindow" android:key="spectrogramFftWindow" android:summary="@string/pref_fftwindow_summary" android:defaultValue="@string/defaultSpectrogramFFTWindow" android:entryValues="@array/fftWindows" />
        <ListPreference android:icon="@drawable/ic_action_brain" android:entries="@array/fftComponents_desc" android:title="@string/pref_FFTComponents" android:key="spectrogramFFTComponents" android:summary="@string/pref_FFTComponents_summary" android:defaultValue="@string/defaultSpectrogramFFTComponents" android:entryValues="@array/fftComponents_values" />
        <EditTextPreference android:icon="@drawable/ic_action_brain" android:title="@string/pref_spectrogramMagnitudeMax" android:key="spectrogramMagnitudeMax" android:summary="@string/pref_spectrogramMagnitudeMax_summary" android:defaultValue="@string/defaultSpectrogramMagnitudeMax" android:inputType="numberDecimal" />
        <EditTextPreference android:icon="@drawable/ic_action_brain" android:title="@string/pref_spectrogramMagnitudeMin" android:key="spectrogramMagnitudeMin" android:summary="@string/pref_spectrogramMagnitudeMin_summary" android:defaultValue="@string/defaultSpectrogramMagnitudeMin" android:inputType="numberDecimal" />
        <ListPreference android:icon="@drawable/ic_action_time" android:enabled="true" android:entries="@array/spectrogramTimerIntervalsDesc" android:title="@string/pref_spectrogramTimerInterval" android:key="spectrogramTimerInterval" android:summary="@string/pref_spectrogramTimerInterval_summary" android:defaultValue="@string/defaultSpectrogramTimerInterval" android:entryValues="@array/spectrogramTimerIntervals" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_brainWaves" android:key="prefCatBrainWaves">
        <CheckBoxPreference android:icon="@drawable/ic_action_graph" android:title="@string/pref_showDelta" android:key="showDelta" android:summary="@string/pref_showDelta_desc" android:defaultValue="@bool/defaultShowDelta" />
        <CheckBoxPreference android:icon="@drawable/ic_action_graph" android:title="@string/pref_showTheta" android:key="showTheta" android:summary="@string/pref_showTheta_desc" android:defaultValue="@bool/defaultShowTheta" />
        <CheckBoxPreference android:icon="@drawable/ic_action_graph" android:title="@string/pref_showAlpha" android:key="showAlpha" android:summary="@string/pref_showAlpha_desc" android:defaultValue="@bool/defaultShowAlpha" />
        <CheckBoxPreference android:icon="@drawable/ic_action_graph" android:title="@string/pref_showBeta" android:key="showBeta" android:summary="@string/pref_showBeta_desc" android:defaultValue="@bool/defaultShowBeta" />
        <CheckBoxPreference android:icon="@drawable/ic_action_graph" android:title="@string/pref_showGamma" android:key="showGamma" android:summary="@string/pref_showGamma_desc" android:defaultValue="@bool/defaultShowGamma" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_algorithms" android:key="prefCatAlgorithms">
        <CheckBoxPreference android:icon="@drawable/ic_action_graph" android:title="@string/pref_showMellow" android:key="showMellow" android:summary="@string/pref_showMellow_desc" android:defaultValue="@bool/defaultShowMellow" />
        <CheckBoxPreference android:icon="@drawable/ic_action_graph" android:title="@string/pref_showConcentration" android:key="showConcentration" android:summary="@string/pref_showConcentration_desc" android:defaultValue="@bool/defaultShowConcentration" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_brainWaveTypesRaw" android:key="prefCatWaveTypesRaw">
        <CheckBoxPreference android:icon="@drawable/ic_action_brain" android:title="@string/pref_showAverage" android:key="showAverageRaw" android:summary="@string/pref_showAverage_desc" android:defaultValue="@bool/defaultShowAverageRaw" />
        <CheckBoxPreference android:icon="@drawable/ic_action_brain_lr" android:title="@string/pref_showLeftRight" android:key="showLeftRightRaw" android:summary="@string/pref_showLeftRight_desc" android:defaultValue="@bool/defaultShowLeftRightRaw" />
        <CheckBoxPreference android:icon="@drawable/ic_action_brain_fb" android:title="@string/pref_showFrontBack" android:key="showFrontBackRaw" android:summary="@string/pref_showFrontBack_desc" android:defaultValue="@bool/defaultShowFrontBackRaw" />
        <CheckBoxPreference android:icon="@drawable/ic_action_brain_all" android:title="@string/pref_showAllSensors" android:key="showAllSensorsRaw" android:summary="@string/pref_showAllSensors_desc" android:defaultValue="@bool/defaultShowAllSensorsRaw" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_brainWaveTypesAbs" android:key="prefCatWaveTypesAbs">
        <CheckBoxPreference android:icon="@drawable/ic_action_brain" android:title="@string/pref_showAverage" android:key="showAverageAbs" android:summary="@string/pref_showAverage_desc" android:defaultValue="@bool/defaultShowAverageAbs" />
        <CheckBoxPreference android:icon="@drawable/ic_action_brain_lr" android:title="@string/pref_showLeftRight" android:key="showLeftRightAbs" android:summary="@string/pref_showLeftRight_desc" android:defaultValue="@bool/defaultShowLeftRightAbs" />
        <CheckBoxPreference android:icon="@drawable/ic_action_brain_fb" android:title="@string/pref_showFrontBack" android:key="showFrontBackAbs" android:summary="@string/pref_showFrontBack_desc" android:defaultValue="@bool/defaultShowFrontBackAbs" />
        <CheckBoxPreference android:icon="@drawable/ic_action_brain_all" android:title="@string/pref_showAllSensors" android:key="showAllSensorsAbs" android:summary="@string/pref_showAllSensors_desc" android:defaultValue="@bool/defaultShowAllSensorsAbs" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_advanced_settings" android:key="prefCatAdv">
        <SwitchPreference android:icon="@drawable/ic_action_action_note_add" android:title="@string/pref_tag_buttons" android:key="tagButtons" android:defaultValue="@bool/defaultTagButtons" android:summaryOn="@string/pref_tag_buttons_desc_on" android:summaryOff="@string/pref_tag_buttons_desc_off" />
        <ListPreference android:icon="@drawable/ic_notch_frequency" android:enabled="true" android:entries="@array/notchFrequencyDesc" android:title="@string/pref_notch_frequency" android:key="notchFrequency" android:summary="@string/pref_notch_frequency_summary" android:defaultValue="@string/defaultNotchFrequency" android:entryValues="@array/notchFrequency" />
    </PreferenceCategory>
    <PreferenceCategory android:key="prefCatApp">
        <Preference android:icon="@drawable/ic_action_good" android:title="@string/pref_marketLinkRate" android:key="marketLinkRate" android:summary="@string/pref_marketLinkRate_summary" />
        <Preference android:icon="@drawable/ic_action_collection" android:title="@string/pref_marketLinkOther" android:key="marketLinkOther" android:summary="@string/pref_marketLinkOther_summary" />
        <Preference android:icon="@drawable/ic_action_web_site" android:title="@string/pref_supportForums" android:key="supportForums" android:summary="@string/pref_supportForums_summary" />
        <Preference android:icon="@drawable/ic_action_email" android:title="@string/pref_supportEmail" android:key="supportEmail" android:summary="@string/pref_supportEmail_summary" />
        <Preference android:icon="@mipmap/ic_launcher" android:title="@string/pref_aboutInfo" android:key="prefAboutInfo" android:summary="@string/pref_aboutInfo_summary" />
    </PreferenceCategory>
</PreferenceScreen>